# kiss-pmctrl

./: CMakeLists.txt  backlightctrl.cpp  backlightctrl.h  idlenotifier.cpp  idlenotifier.h  main.cpp  main.qml  suspendctrl.cpp  suspendctrl.h
